sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i <-1 to 8) {
    for (j <-1 to 8)
    { if plusPetit(i, j) {
      echange(i, j)
    }

    }
  }
}